# options-strategy-assistant

./: .gitignore  README.md  app.py  pyproject.toml  start_options_strategy_assistant.command
.streamlit/: config.toml
data/: strategy_catalog.json
scripts/: build_strategy_catalog.py
src/options_strategy_assistant/: __init__.py  builder.py  catalog.py
tests/: test_builder.py  test_catalog.py
