[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "options-strategy-assistant"
version = "0.1.0"
description = "A Streamlit-based options strategy assistant for education and strategy discovery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openpyxl",
  "pandas",
  "streamlit",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
